--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>uqbar-examples</groupId>
-   <artifactId>conversor-ui-arena</artifactId>
-   <name>conversor-ui-arena</name>
-   <description>Ejemplo más simple de una aplicación con Arena usando bindings.</description>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>uqbar-examples</groupId>
+  <artifactId>conversor-ui-arena</artifactId>
+  <name>conversor-ui-arena</name>
+  <description>Ejemplo más simple de una aplicación con Arena usando bindings.</description>
 
-   <parent>
+  <parent>
+    <groupId>org.uqbar-project</groupId>
+    <artifactId>uqbar-parent-project</artifactId>
+    <version>1.7</version>
+  </parent>
+
+  <dependencies>
+    <dependency>
       <groupId>org.uqbar-project</groupId>
-      <artifactId>uqbar-parent-project</artifactId>
-      <version>1.7</version>
-   </parent>
-
-   <dependencies>
-        <dependency>
-           <groupId>org.uqbar-project</groupId>
-           <artifactId>arena-jface</artifactId>
-           <version>3.3-SNAPSHOT</version>
-        </dependency>
-   </dependencies>
+      <artifactId>arena-jface</artifactId>
+      <version>3.3-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>javassist</artifactId>
+          <groupId>javassist</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.18.1-GA</version>
+    </dependency>
+  </dependencies>
 
 
   <build>
